# k-gap

./: .gitattributes  .gitignore  Makefile  README.md  data-clean.sh  docker-compose.fuseki.yml  docker-compose.oxigraph.yml  docker-compose.virtuoso.yml  docker-compose.yml  docker_clean.sh  docker_info.sh  dotenv-example  info.sh  jupyter_url.sh  kgap_shacl.py  test.sh  test_cleanup.py  validate-shacl-host.sh
.github/workflows/: deploy-docs.yml  docker-images.yml
data/: ldes-feeds-example.yml
data/sembench/: sembench.yaml
data/travharv_config/: test_config.yml
docs/: GITHUB_PAGES.md  README.md  _config.yml  advanced-topics.md  components.md  configuration-guide.md  faq.md  index.md  myst.yml  quick-reference.md  shacl-validation-guide.md  workflow.md
docs/components/: fuseki.md  graphdb.md  jupyter.md  ldes-consumer.md  oxigraph.md  sembench.md  virtuoso.md
fuseki/: Dockerfile
fuseki/kgap/: entrypoint-wrap.sh  healthy.sh  (+1 more)
graphdb/: Dockerfile
ingest/: Dockerfile  main.py  requirements.txt
ingest/lwua-py/: debug-logconf.yml  pyproject.toml
ingest/lwua-py/lwua/: __init__.py  __main__.py  daemon.py  graphdb.py  helpers.py  ingest.py  schedule.py  watcher.py
ingest/lwua-py/tests/: test.ttl  test_graphdb.py  test_ingest.py  test_queries.py
jupyter/: Dockerfile  requirements.txt
ldes-consumer/: .dockerignore  Dockerfile  README.md  app.py  feed-config.yaml.example  ldes-feeds.yaml.example  requirements.txt
ldes-coordinator/: Dockerfile  README.md
oxigraph/: Dockerfile
sembench/: Dockerfile  main.py  requirements.txt
virtuoso/: Dockerfile
(+25 files in other folders)
